frontend/src/index.css
body {
  background-color: #121212;
  color: #ededed;
  margin: 0;
  height: 100vh;
  font-family: "Open Sans", sans-serif;
}

.mainContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

/* normal: #121212 */
/* hover: #515151 */
.postingCard {
  background-color: #222222;
  border: 1px solid #ededed;
  border-radius: 5px;
  width: 600px;
  padding: 20px 25px;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.postingCardTitleContainer {
  display: flex;
  justify-content: space-between;
}

.postingCardTitle {
  font-size: 24px;
  font-weight: bold;
}

.postingCardSubtitle {
  font-size: 14px;
}

.highlightedText {
  font-weight: bold;
}

.postingFooter {
  font-size: 14px;
}

.postingMoreInfo {
  color: #93c5fd;
}

